@@ -644,6 +644,8 @@ public class ClassTypeResolver extends JavaParserVisitorAdapter {
 		List<ASTImportDeclaration> theImportDeclarations = node.findChildrenOfType(ASTImportDeclaration.class);
 		importedClasses = new HashMap<String, String>();
 
+		importedClasses.putAll(myJavaLang);
+
 		// go through the imports
 		for (ASTImportDeclaration anImportDeclaration : theImportDeclarations) {
 			String strPackage = anImportDeclaration.getPackageName();
@@ -655,8 +657,6 @@ public class ClassTypeResolver extends JavaParserVisitorAdapter {
 				importedClasses.put(strName.substring(strPackage.length() + 1), strName);
 			}
 		}
-
-		importedClasses.putAll(myJavaLang);
 	}
 
 	private void populateClassName(ASTCompilationUnit node, String className) throws ClassNotFoundException {
